--- a/index.css
+++ b/index.css
@@ -1,8 +1,7 @@
 /* Font Family
 ================================================== */
 
-@import url("http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:200,300,400");
-
+@import url(https://fonts.googleapis.com/css?family=Roboto);
 
 /* Desktop
 ================================================== */
@@ -57,9 +56,8 @@ ul { list-style:none; }
 html,body {
 -webkit-font-smoothing:antialiased;
 -webkit-text-size-adjust:100%;
-background-color:#111;
 color:#C8C7C8;
-font:20px/24px "Yanone Kaffeesatz", HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif;
+font:20px/24px "Roboto", HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif;
 font-weight:300;
 padding:5px 0;
 }
