--- a/index.css
+++ b/index.css
@@ -114,19 +114,28 @@ transition:all 100ms ease;
 ================================================== */
 
 /* Default / Desktop / Firefox */
+#audio0 { display:inline; }
 audio { margin:0 15px 0 14px; width:670px; }
 #mainwrap { /* add box-shadow or other styles here */ }
-#audiowrap { background-color:#231F20; margin:0 auto; }
+#player {
+    background-color:#231F20;
+    margin:0 auto;
+    position:fixed;
+    bottom:0px;
+    padding-bottom: 5px;
+    padding-top: 16px;
+    width: 100%;
+}}
 #plwrap { margin:0 auto; }
-#tracks { min-height:65px; position:relative; text-align:center; text-decoration:none; top:13px; }
-#nowPlay { display:inline; }
-#npTitle { margin:0; padding:21px; text-align:right; }
+#tracks { padding-left: 7%; display:inline; width:20%; min-height:65px; text-align:center; text-decoration:none; top:13px; }
+#nowPlay { display:inline; padding-right: 7%; padding-left: 10px;}
+#npTitle { margin:0; text-align:right; }
 #npAction { padding:21px; position:absolute; }
 #plList { margin:0; }
-#plList li { background-color:#231F20; cursor:pointer; margin:0; padding:21px 0; }
+#plList li { background-color:#231F20; cursor:pointer; margin:0; padding:10px 0; }
 #plList li:hover { background-color:#262223; }
-.plItem { position:relative; }
-.plTitle { left:50px; overflow:hidden; position:absolute; right:65px; text-overflow:ellipsis; top:0; white-space:nowrap; }
+.plItem { position:relative; margin-bottom: 10px;}
+.plTitle { left:32%; overflow:hidden; position:absolute; text-overflow:ellipsis; white-space:nowrap; }
 .plNum { padding-left:21px; width:25px; }
 .plLength { padding-left:21px; position:absolute; right:21px; top:0; }
 .plSel,.plSel:hover { background-color:#262223!important; cursor:default!important; }
@@ -137,7 +146,7 @@ a[id^="btn"]::-moz-focus-inner { border:0; padding:0; }
 
 /* IE 9 */
 html[data-useragent*="MSIE 9.0"] audio { margin-left:9px; outline:none; width:680px; }
-html[data-useragent*="MSIE 9.0"] #audiowrap { background-color:#000; }
+html[data-useragent*="MSIE 9.0"] #player { background-color:#000; }
 html[data-useragent*="MSIE 9.0"] #tracks { min-height:57px; top:5px; }
 html[data-useragent*="MSIE 9.0"] a[id^="btn"] { background-color:#000; }
 html[data-useragent*="MSIE 9.0"] a[id^="btn"]:hover { background-color:#080808; }
@@ -148,7 +157,7 @@ html[data-useragent*="MSIE 9.0"] .plSel:hover { background-color:#080808!importa
 
 /* IE 10 */
 html[data-useragent*="MSIE 10.0"] audio { margin-left:6px; width:687px; }
-html[data-useragent*="MSIE 10.0"] #audiowrap { background-color:#000; }
+html[data-useragent*="MSIE 10.0"] #player { background-color:#000; }
 html[data-useragent*="MSIE 10.0"] #tracks { min-height:60px; top:8px; }
 html[data-useragent*="MSIE 10.0"] a[id^="btn"] { background-color:#000; }
 html[data-useragent*="MSIE 10.0"] a[id^="btn"]:hover { background-color:#080808; }
@@ -159,7 +168,7 @@ html[data-useragent*="MSIE 10.0"] .plSel:hover { background-color:#080808!import
 
 /* IE 11 */
 html[data-useragent*="rv:11.0"] audio { margin-left:2px; width:695px; }
-html[data-useragent*="rv:11.0"] #audiowrap { background-color:#000; }
+html[data-useragent*="rv:11.0"] #player { background-color:#000; }
 html[data-useragent*="rv:11.0"] #tracks { min-height:60px; top:8px; }
 html[data-useragent*="rv:11.0"] a[id^="btn"] { background-color:#000; }
 html[data-useragent*="rv:11.0"] a[id^="btn"]:hover { background-color:#080808; }
@@ -170,7 +179,7 @@ html[data-useragent*="rv:11.0"] .plSel:hover { background-color:#080808!importan
 
 /* All Apple Products */
 html[data-useragent*="Apple"] audio { margin:0; width:100%; }
-html[data-useragent*="Apple"] #audiowrap { background-color:#000; }
+html[data-useragent*="Apple"] #player { background-color:#000; }
 html[data-useragent*="Apple"] #tracks { min-height:64px; top:12px; }
 html[data-useragent*="Apple"] a[id^="btn"] { background-color:#000; }
 html[data-useragent*="Apple"] a[id^="btn"]:hover { background-color:#080808; }
@@ -182,7 +191,7 @@ html[data-useragent*="Apple"] .plSel:hover { background-color:#080808!important;
 /* IOS 7 */
 html[data-useragent*="OS 7"] body { color:#373837; }
 html[data-useragent*="OS 7"] audio { margin-left:3px; width:690px; }
-html[data-useragent*="OS 7"] #audiowrap { background-color:#e6e6e6; }
+html[data-useragent*="OS 7"] #player { background-color:#e6e6e6; }
 html[data-useragent*="OS 7"] #tracks { min-height:75px; top:23px; }
 html[data-useragent*="OS 7"] a[id^="btn"] { background-color:#e6e6e6; color:#373837; }
 html[data-useragent*="OS 7"] a[id^="btn"]:hover { background-color:#eee; }
@@ -194,7 +203,7 @@ html[data-useragent*="OS 7"] .plSel:hover { background-color:#eee!important; }
 /* IOS 8 */
 html[data-useragent*="OS 8"] body { color:#373837; }
 html[data-useragent*="OS 8"] audio { margin-left:6px; width:694px; }
-html[data-useragent*="OS 8"] #audiowrap { background-color:#e4e4e4; }
+html[data-useragent*="OS 8"] #player { background-color:#e4e4e4; }
 html[data-useragent*="OS 8"] #tracks { min-height:75px; top:23px; }
 html[data-useragent*="OS 8"] a[id^="btn"] { background-color:#e4e4e4; color:#373837; }
 html[data-useragent*="OS 8"] a[id^="btn"]:hover { background-color:#eee; }
@@ -206,7 +215,7 @@ html[data-useragent*="OS 8"] .plSel:hover { background-color:#eee!important; }
 /* IOS 9 */
 html[data-useragent*="OS 9"] body { color:#373837; }
 html[data-useragent*="OS 9"] audio { margin-left:6px; width:694px; }
-html[data-useragent*="OS 9"] #audiowrap { background-color:#d5d5d5; }
+html[data-useragent*="OS 9"] #player { background-color:#d5d5d5; }
 html[data-useragent*="OS 9"] #tracks { min-height:75px; top:23px; }
 html[data-useragent*="OS 9"] a[id^="btn"] { background-color:#d5d5d5; color:#373837; }
 html[data-useragent*="OS 9"] a[id^="btn"]:hover { background-color:#eee; }
@@ -217,7 +226,7 @@ html[data-useragent*="OS 9"] .plSel:hover { background-color:#eee!important; }
 
 /* Chrome */
 html[data-useragent*="Chrome"] audio { margin-left:6px; width:687px; }
-html[data-useragent*="Chrome"] #audiowrap { background-color:#141414; }
+html[data-useragent*="Chrome"] #player { background-color:#141414; }
 html[data-useragent*="Chrome"] #tracks { min-height:64px; top:12px; }
 html[data-useragent*="Chrome"] a[id^="btn"] { background-color:#141414; }
 html[data-useragent*="Chrome"] a[id^="btn"]:hover { background-color:#171717; }
@@ -229,7 +238,7 @@ html[data-useragent*="Chrome"] .plSel:hover { background-color:#171717!important
 /* Chrome / Android / Tablet */
 html[data-useragent*="Chrome"][data-useragent*="Android"] body { color:#373837; }
 html[data-useragent*="Chrome"][data-useragent*="Android"] audio { margin-left:4px; width:689px; }
-html[data-useragent*="Chrome"][data-useragent*="Android"] #audiowrap { background-color:#fafafa; }
+html[data-useragent*="Chrome"][data-useragent*="Android"] #player { background-color:#fafafa; }
 html[data-useragent*="Chrome"][data-useragent*="Android"] #tracks { min-height:75px; top:23px; }
 html[data-useragent*="Chrome"][data-useragent*="Android"] a[id^="btn"] { background-color:#fafafa; color:#373837; }
 html[data-useragent*="Chrome"][data-useragent*="Android"] a[id^="btn"]:hover { background-color:#eee; }
@@ -281,4 +290,12 @@ html[data-useragent*="OS 9"] audio { width:294px; }
 html[data-useragent*="Chrome"] audio { width:287px; }
 html[data-useragent*="Chrome"][data-useragent*="Mobile"] audio { margin-left:4px; width:290px; }
 #npTitle { width:167px; }
+}
+
+html {
+  background: url(bg.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
